--- a/css/styles.css
+++ b/css/styles.css
@@ -233,16 +233,47 @@ body {
 }
 
 #location-button:hover,
-#location-button:active,
-#location-button:focus {
+#location-button:active{
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: var(--shadow-hover);
 }
 
 /* weather card styles */
+ #map { 
+  height: 400px;
+  width: 50%;
+  border: none;
+  border-radius: calc(var(--border-radius)*2);
+}
+#weather-layers-select {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: var(--border-radius);
+  backdrop-filter: blur(30px);
+  padding: 10px;
+  font-family: var(--p-font);
+  font-size: 13px;
+  color: rgba(0, 0, 0, 1);
+  cursor: pointer;
+  transition: var(--transition);
+}
+#weather-layers-select:hover,
+#weather-layers-select:focus {
+  background-color: rgba(255, 255, 255, 0.3);
+}
 
-.weather-info {
-  background-color: rgba(255, 255, 255, 0.2);
+#weather-layers-select option {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: rgba(0, 0, 0, 0.6);
+  font-family: var(--p-font);
+  font-size: 13px;
+}
+
+.weather-container {
   backdrop-filter: blur(30px);
   color: var(--text-color);
   font-family: var(--p-font);
@@ -250,10 +281,10 @@ body {
   border-radius: var(--border-radius);
   padding: 20px;
   width: 85%;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 0.7fr 1fr 0.5fr;
-  grid-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
 }
 .loader {
   display: none;
@@ -281,6 +312,7 @@ body {
   border-radius: 5px;
   grid-column: span 6;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -302,12 +334,12 @@ body {
 }
 
 .location-units-div select {
-  background-color: rgba(255, 255, 255, 0.2);
-  font-weight: 500;
-  color: rgba(0, 0, 0, 1);
+  background-color: transparent;
+  font-weight: 400;
+  color: white;
   font-family: var(--p-font);
   font-size: 14px;
-  box-shadow: inset 0 0 8px rgba(255, 255, 255, 0.6);
+  box-shadow: inset 0 0 8px rgba(255, 255, 255, 0.6), 1px 1px 5px rgba(0, 0, 0, 0.3);
   padding: 10px;
   border: none;
   border-radius: var(--border-radius);
@@ -316,9 +348,21 @@ body {
 }
 .location-units-div select:hover,
 .location-units-div select:focus {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(72, 136, 255, 0.3);
   box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.8);
 }
+
+.location-units-div select option {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: black;
+  font-family: var(--p-font);
+  font-size: 14px;
+  padding: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: var(--border-radius);
+  transition: var(--transition);
+}
+
 
 .time-div {
   background-color:transparent;
@@ -330,7 +374,6 @@ body {
 }
 
 .weather-div {
-  margin-top: 10px;
   width: 100%;
   padding: 0 20px;
   display: flex;
@@ -353,7 +396,7 @@ body {
 }
 
 .weather-div img{
-  width: 50px;
+  width: 80px;
 }
 
 .weather-details p{
@@ -368,7 +411,6 @@ body {
   width: 100%;
   padding: 0 20px;
   display: flex;
-  margin-top: 20px;
   font-family: var(--p-font);
   color: var(--text-color);
   font-size: 14px;
@@ -551,6 +593,24 @@ body {
   color: var(--text-color);
   font-size: 14px;
   font-weight: 300;
+}
+
+.error-message {
+  font-family: var(--p-font);
+  color: var(--text-color);
+  font-size: 14px;
+  font-weight: 300;
+  text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.error-message img {
+  width: 300px;
+  height: 300px;
 }
 
 /* footer styles */
